--- a/lessons__14/index.html
+++ b/lessons__14/index.html
@@ -9,16 +9,16 @@
 
 <body>
 	<div class="rootpage">
-		<h1>Верстка «gulp GLOBAL»</h1>
+		<h1>Верстка «FLEX»</h1>
 		<div class="rootpage__info">
-			flex
+			flex-box | №14
 		</div>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">ДЗ | 14</a></li>
+			<li><a target="_blank" href="home.html">ДЗ | №11</a></li>
 		</ol>
 		<div class="rootpage__tnx">
-			<h2>Дякую за фідбек</h2>
+			<h2>Все держиться на коcтилях _-_</h2>
 		</div>
 	</div>
 </body>
