--- a/lessons__15/index.html
+++ b/lessons__15/index.html
@@ -4,18 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Верстка «gulp GLOBAL»</title>
+	<title>Верстка «Dananz»</title>
 </head>
 
 <body>
 	<div class="rootpage">
-		<h1>Верстка «gulp GLOBAL»</h1>
+		<h1>Верстка «Dananz»</h1>
 		<div class="rootpage__info">
-			Опис проєкту
+			FLEX BOX | №15
 		</div>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">ДЗ | №11</a></li>
+			<li><a target="_blank" href="home.html">ДЗ | №15</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за фідбек</h2>
