--- a/lessons__16/home.html
+++ b/lessons__16/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230320220352">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230320224351">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -123,7 +123,7 @@
 								</div>
 								<div class="login-user__postal-code login-user-global-style">
 									<label for="postal-code-2">Zip/Postal Code</label>
-									<input type="postal-code-2" name="postal-code-2" id="postal-code-2">
+									<input type="text" name="postal-code-2" id="postal-code-2">
 								</div>
 							</div>
 						</div>
@@ -143,31 +143,31 @@
 							<div class="login-user__body">
 								<div class="login-user__first-name-3 login-user-global-style">
 									<label for="first-name-3">First Name <span>*</span></label>
-									<input type="first-name-3" required name="first-name-3" id="first-name-3">
+									<input type="text" required name="first-name-3" id="first-name-3">
 								</div>
 								<div class="login-user__last-name-3 login-user-global-style">
 									<label for="last-name-3">Last Name <span>*</span></label>
-									<input type="last-name-3" required name="last-name-3" id="last-name-3">
+									<input type="text" required name="last-name-3" id="last-name-3">
 								</div>
 								<div class="login-user__company-3 login-user-global-style">
 									<label for="company-3">Company</label>
-									<input type="company-3" name="postal-code-2" id="postal-code-2">
+									<input type="text" name="postal-code-2" id="postal-code-2">
 								</div>
 								<div class="login-user__street-address-3 login-user-global-style">
 									<label for="street-address-3">Street Address <span>*</span></label>
 									<div class="login-user__culon-input">
-										<input type="street-address-3" required name="street-address-3" id="street-address-3">
-										<input type="street-address-3" required name="street-address-3" id="street-address-3">
-										<input type="street-address-3" required  name="street-address-3" id="street-address-3">
+										<input type="text" name="street-address-3" id="street-address-3">
+										<input type="text" name="street-address-3" id="street-address-3">
+										<input type="text" name="street-address-3" id="street-address-3">
 									</div>
 								</div>
 								<div class="login-user__country login-user-global-style">
 									<label for="country-3">Country <span>*</span></label>
-									<input type="country-3" required name="country-3" id="country-3">
+									<input type="text" name="country-3" id="country-3">
 								</div>
 								<div class="login-user__state-province login-user-global-style">
 									<label for="state-province-3">State/Province <span>*</span></label>
-									<input type="state-province-3" required name="state-province-3" id="state-province-3">
+									<input type="text" name="state-province-3" id="state-province-3">
 								</div>
 							</div>
 						</div>
@@ -213,7 +213,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230320220352"></script>
+	<script src="js/app.min.js?_v=20230320224351"></script>
 </body>
 
 </html>
