--- a/lessons__16/index.html
+++ b/lessons__16/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Верстка «FORM»</title>
+	<title>Верстка «gulp GLOBAL»</title>
 </head>
 
 <body>
 	<div class="rootpage">
 		<h1>Верстка «FORM»</h1>
 		<div class="rootpage__info">
-			
+			FORM
 		</div>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
