--- a/lessons__16/home.html
+++ b/lessons__16/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230320224351">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230320225216">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,12 +118,12 @@
 									<input type="email" name="email-2" id="email-2">
 								</div>
 								<div class="login-user__password login-user-global-style">
-									<label for="password-2">Password</label>
-									<input type="password" name="password-2" id="password-2">
+									<label for="password-id-2">Password</label>
+									<input type="password" name="password-2" id="password-id-2">
 								</div>
 								<div class="login-user__postal-code login-user-global-style">
-									<label for="postal-code-2">Zip/Postal Code</label>
-									<input type="text" name="postal-code-2" id="postal-code-2">
+									<label for="postal-id-code-2">Zip/Postal Code</label>
+									<input type="text" name="postal-code-2" id="postal-id-code-2">
 								</div>
 							</div>
 						</div>
@@ -142,23 +142,23 @@
 						<div class="login-user__wrapper">
 							<div class="login-user__body">
 								<div class="login-user__first-name-3 login-user-global-style">
-									<label for="first-name-3">First Name <span>*</span></label>
-									<input type="text" required name="first-name-3" id="first-name-3">
+									<label for="first-id-name-3">First Name <span>*</span></label>
+									<input type="text" required name="first-name-3" id="first-id-name-3">
 								</div>
 								<div class="login-user__last-name-3 login-user-global-style">
-									<label for="last-name-3">Last Name <span>*</span></label>
-									<input type="text" required name="last-name-3" id="last-name-3">
+									<label for="last-name-id-3">Last Name <span>*</span></label>
+									<input type="text" required name="last-name-3" id="last-name-id-3">
 								</div>
 								<div class="login-user__company-3 login-user-global-style">
-									<label for="company-3">Company</label>
-									<input type="text" name="postal-code-2" id="postal-code-2">
+									<label for="postal-id-code-3">Company</label>
+									<input type="text" name="postal-code-3" id="postal-id-code-3">
 								</div>
 								<div class="login-user__street-address-3 login-user-global-style">
-									<label for="street-address-3">Street Address <span>*</span></label>
+									<label for="street-id-address-3">Street Address <span>*</span></label>
 									<div class="login-user__culon-input">
-										<input type="text" name="street-address-3" id="street-address-3">
-										<input type="text" name="street-address-3" id="street-address-3">
-										<input type="text" name="street-address-3" id="street-address-3">
+										<input type="text" name="street-address-3" id="street-id-address-3">
+										<input type="text" name="street-address-3" id="street-id-address-3">
+										<input type="text" name="street-address-3" id="street-id-address-3">
 									</div>
 								</div>
 								<div class="login-user__country login-user-global-style">
@@ -166,8 +166,8 @@
 									<input type="text" name="country-3" id="country-3">
 								</div>
 								<div class="login-user__state-province login-user-global-style">
-									<label for="state-province-3">State/Province <span>*</span></label>
-									<input type="text" name="state-province-3" id="state-province-3">
+									<label for="state-id-province-3">State/Province <span>*</span></label>
+									<input type="text" name="state-province-3" id="state-id-province-3">
 								</div>
 							</div>
 						</div>
@@ -179,16 +179,16 @@
 								<div class="radio-shipping-methods__wrapper">
 									<div class="radio-shipping-methods__body">
 										<div class="radio-shipping-methods__radio">
-											<input type="radio" name="radio-shipping" value="five-dollars" checked id="radio-shipping-3">
-											<label for="radio-shipping-3">$5.00</label>
+											<input type="radio" name="radio-shipping" value="five-dollars" checked id="radio-id-shipping-3">
+											<label for="radio-id-shipping-3">$5.00</label>
 										</div>
 										<div class="radio-shipping-methods__fixed">Fixed</div>
 										<div class="radio-shipping-methods__fixed">Flat Rate</div>
 									</div>
 									<div class="radio-shipping-methods__body">
 										<div class="radio-shipping-methods__radio">
-											<input type="radio" value="ten-dollar-bill" name="radio-shipping" id="radio-shipping-4">
-											<label for="radio-shipping-4">$10.00</label>
+											<input type="radio" value="ten-dollar-bill" name="radio-shipping" id="radio-id-shipping-4">
+											<label for="radio-id-shipping-4">$10.00</label>
 										</div>
 										<div class="radio-shipping-methods__fixed">Table Rate</div>
 										<div class="radio-shipping-methods__fixed">Best Way</div>
@@ -213,7 +213,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230320224351"></script>
+	<script src="js/app.min.js?_v=20230320225216"></script>
 </body>
 
 </html>
