--- a/lessons__18/exa-mple.html
+++ b/lessons__18/exa-mple.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230327152044">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230328120136">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,219 +16,216 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
-				<div class="header__header logo"><a class="header__logo" href="home.html">VENCE</a></div>
+				<div class="header__header">
+					<a class="header__logo logo" href="#!">VENCE</a>
+				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item"><a href="home.html" class="menu__link">Resources</a></li>
-							<li class="menu__item"><a href="exa-mple.html" class="menu__link active">Exa mple</a></li>
+							<li class="menu__item"><a href="#!" class="menu__link active">Exa mple</a></li>
 							<li class="menu__item">
-								<a href="#!" class="menu__link">Inspiration</a>
+								<a href="#!" class="menu__link">Courses</a>
 							</li>
-							<li class="menu__item"><a href="#!" class="menu__link">Tutorials</a></li>
+							<li class="menu__item"><a href="#!" class="menu__link">Blog</a></li>
 						</ul>
 					</nav>
 				</div>
-				<div class="header__end end-header">
-					<div class="end-header__social-networks social-networks social-networks_menu">
-						<a class="social-networks__fb" href="#!">Fb</a>
-						<a class="social-networks__tw" href="#!">Tw</a>
-						<a class="social-networks__ln" href="#!">Ln</a>
+				<div class="header__social-network social-network">
+					<div class="social-network__wrapper">
+						<a href="#!">Fb</a>
+						<a href="#!">Tw</a>
+						<a href="#!">Ln</a>
 					</div>
+					<div class="social-network__serch">
+						<a href="#!"><img src="img/item/serch.svg" alt=""></a>
+					</div>
+
 				</div>
 				<button class="menu-burger"><span></span></button>
 			</div>
 		</header>
 		<main class="page-exa-mple">
-			<section class="page-exa-mple__photographer photographer">
-				<div class="photographer__container">
-					<div class="photographer__content photographer__content_bg">
-						<div class="photographer__author">Tomas Edwardo</div>
-						<h1 class="photographer__title title title_while">Instagram artists with great photography skills
-						</h1>
+			<section class="page-exa-mple__designphilosophy designphilosophy">
+				<div class="designphilosophy__container">
+					<div class="designphilosophy__article">
+						<div class="designphilosophy__content">
+							<div class="designphilosophy__author">Tomas Edwardo</div>
+							<h1 class="designphilosophy__title title title_white">Instagram artists with great photography
+								skills
+							</h1>
+						</div>
+						<div class="designphilosophy__background">
+							<picture><source srcset="img/designphilosophy/house.webp" type="image/webp"><img src="img/designphilosophy/house.jpg" alt=""></picture>
+						</div>
 					</div>
 				</div>
 			</section>
-			<section class="page-exa-mple__design-philosophy design-philosophy">
-				<div class="design-philosophy__container">
-					<div class="design-philosophy__header">
-						<h2 class="design-philosophy__title title title_black">Design is not just what it looks like and feels
-							like.</h2>
-						<div class="design-philosophy__menu menu-design">
-							<ul class="menu-design__list">
-								<li class="menu-design__item">
-									<a class="menu-design__link menu-design__link_active" href="#!">All</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Modern</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Industrial</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Art Moderne</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Contemporary</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Industrial</a>
-								</li>
-								<li class="menu-design__item">
-									<a class="menu-design__link" href="#!">Minimalist</a>
-								</li>
-							</ul>
-						</div>
+			<section class="page-exa-mple__design design">
+				<div class="design__container">
+					<div class="design__header">
+						<h2 class="design__title title title_black">Design is not just what it looks like and feels like.</h2>
+						<ul class="design__list">
+							<li class="design__item">
+								<a href="#!" class="design__link active">All</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Modern</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Industrial</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Art Moderne</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Contemporary</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Industrial</a>
+							</li>
+							<li class="design__item">
+								<a href="#!" class="design__link">Minimalist</a>
+							</li>
+						</ul>
 					</div>
-					<div class="design-philosophy__card card">
-						<div class="card__wrapper">
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/01.webp" type="image/webp"><img src="img/card/01.jpg" alt=""></picture>
+					<div class="design__card card-design">
+						<div class="card-design__wrapper">
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/01.webp" type="image/webp"><img src="img/desing/01.jpg" alt=""></picture>
 								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
-								</div>
-							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/02.webp" type="image/webp"><img src="img/card/02.jpg" alt=""></picture>
-								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
 								</div>
 							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/03.webp" type="image/webp"><img src="img/card/03.jpg" alt=""></picture>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/02.webp" type="image/webp"><img src="img/desing/02.jpg" alt=""></picture>
 								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
-								</div>
-							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/04.webp" type="image/webp"><img src="img/card/04.jpg" alt=""></picture>
-								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
 								</div>
 							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/05.webp" type="image/webp"><img src="img/card/05.jpg" alt=""></picture>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/03.webp" type="image/webp"><img src="img/desing/03.jpg" alt=""></picture>
 								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
-								</div>
-							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/06.webp" type="image/webp"><img src="img/card/06.jpg" alt=""></picture>
-								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
 								</div>
 							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/07.webp" type="image/webp"><img src="img/card/07.jpg" alt=""></picture>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/04.webp" type="image/webp"><img src="img/desing/04.jpg" alt=""></picture>
 								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
-								</div>
-							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/08.webp" type="image/webp"><img src="img/card/08.jpg" alt=""></picture>
-								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
 								</div>
 							</div>
-							<div class="card__body">
-								<div class="card__image">
-									<picture><source srcset="img/card/09.webp" type="image/webp"><img src="img/card/09.jpg" alt=""></picture>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/05.webp" type="image/webp"><img src="img/desing/05.jpg" alt=""></picture>
 								</div>
-								<div class="card__content">
-									<div class="card__data">29.Jun.2021</div>
-									<div class="card__title">
-										<a href="card__title-link">Richard Norton photorealistic rendering as real
-											photos</a>
-									</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
+								</div>
+							</div>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/06.webp" type="image/webp"><img src="img/desing/06.jpg" alt=""></picture>
+								</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
+								</div>
+							</div>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/07.webp" type="image/webp"><img src="img/desing/07.jpg" alt=""></picture>
+								</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
+								</div>
+							</div>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/08.webp" type="image/webp"><img src="img/desing/08.jpg" alt=""></picture>
+								</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
+								</div>
+							</div>
+							<div class="card-design__body">
+								<div class="card-design__image">
+									<picture><source srcset="img/desing/09.webp" type="image/webp"><img src="img/desing/09.jpg" alt=""></picture>
+								</div>
+								<div class="card-design__content">
+									<div class="card-design__data">29.Jun.2021</div>
+									<a class="card-design__sub-title sub-title" href="#!">Richard Norton photorealistic rendering
+										as real
+										photos</a>
 								</div>
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
-				<div class="footer__header">
-					<div class="footer__logo">VENCE Studio</div>
-					<div class="footer__body footer-menu">
-						<nav class="footer-menu__nav">
-							<ul class="footer-menu__list">
-								<li class="footer-menu__item">
-									<a href="#!" class="footer-menu__link">About Studio</a>
-								</li>
-								<li class="footer-menu__item">
-									<a href="#!" class="footer-menu__link">Archive</a>
-								</li>
-								<li class="footer-menu__item">
-									<a href="#!" class="footer-menu__link">Contact Us</a>
-								</li>
-							</ul>
-						</nav>
+				<div class="footer__top">
+					<a class="footer__logo logo logo_footer" href="#!">VENCE Studio</a>
+					<div class="footer__menu menu-footer">
+						<ul class="menu-footer__list">
+							<li class="menu-footer__item">
+								<a href="#!" class="menu-footer__link">About Studio</a>
+							</li>
+							<li class="menu-footer__item">
+								<a href="#!" class="menu-footer__link">Archive</a>
+							</li>
+							<li class="menu-footer__item">
+								<a href="#!" class="menu-footer__link">Contact Us</a>
+							</li>
+						</ul>
 					</div>
-					<div class="footer__social-networks social-networks">
-						<a class="social-networks__fb" href="#!">Fb</a>
-						<a class="social-networks__tw" href="#!">Tw</a>
-						<a class="social-networks__ln" href="#!">Ln</a>
+					<div class="footer__social-network social-network">
+						<a href="#!">Fb</a>
+						<a href="#!">Tw</a>
+						<a href="#!">Ln</a>
 					</div>
 				</div>
-				<div class="footer__bottom author-signature">
-					<a class="author-signature__name" href="#!">1088, North Street, Alexandria, AU</a>
-					<a class="author-signature__data" href="#!">© 2022, All Rights Reserved</a>
+				<div class="footer__location location">
+					<div class="location__city">1088, North Street, Alexandria, AU</div>
+					<div class="location__rights-reserved">© 2022, All Rights Reserved</div>
 				</div>
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230327152044"></script>
+	<script src="js/app.min.js?_v=20230328120136"></script>
 </body>
 
 </html>
