--- a/lessons__18/index.html
+++ b/lessons__18/index.html
@@ -9,13 +9,14 @@
 
 <body>
 	<div class="rootpage">
+		<h1>Верстка «DENZ | ДЗ 18»</h1>
 		<div class="rootpage__info">
-			Практика + адаптив
+			Адаптив + 2 ст
 		</div>
 		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Сторінка </a></li>
-			<li><a target="_blank" href="exa-mple.html">Сторінка </a></li>
+			<li><a target="_blank" href="home.html">Сторінка</a></li>
+			<li><a target="_blank" href="exa-mple.html">Сторінка</a></li>
 		</ol>
 		<div class="rootpage__tnx">
 			<h2>Дякую за фідбек</h2>
