--- a/Lessons_21/index.html
+++ b/Lessons_21/index.html
@@ -1,396 +1,167 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<title>HomePage</title>
 	<meta charset="UTF-8">
-	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230410120932">
-	<link rel="shortcut icon" href="favicon.ico">
-	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Верстка «gulp GLOBAL»</title>
 </head>
 
 <body>
-	<div class="wrapper">
-		<header class="header">
-			<div class="header__container">
-				<div class="header__logo">
-					<a class="header__logo-link" href="#!">VENCE</a>
-				</div>
-				<div class="header__menu menu">
-					<nav class="menu__body">
-						<ul class="menu__list">
-							<li class="menu__item"><a href="" class="menu__link">Home</a></li>
-							<li class="menu__item">
-								<a href="" class="menu__link menu__link_arrow">Inspiration</a>
-								<div class="menu__sub-menu sub-menu">
-									<ul class="sub-menu__list">
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Digital Products</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">New Trend</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Graphic Arts</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Web Design</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu__item">
-								<a href="" class="menu__link menu__link_arrow">Courses</a>
-								<div class="menu__sub-menu sub-menu">
-									<ul class="sub-menu__list">
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Digital Products</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">New Trend</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Graphic Arts</a>
-										</li>
-										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#!">Web Design</a>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="menu__item"><a href="" class="menu__link">Blog</a></li>
-						</ul>
-					</nav>
-				</div>
-				<div class="header__serch serch">
-					<a class="serch__link" href="#!"><img class="serch__image" src="img/item/serch.svg" alt=""></a>
-					<button type="button" class="serch__icon icon-menu"><span></span></button>
-				</div>
-			</div>
-		</header>
-		<main class="page">
-			<section class="page__header header-page">
-				<div class="header-page__image-bg">
-					<picture><source srcset="img/bg/bg-header.webp" type="image/webp"><img src="img/bg/bg-header.jpg" alt=""></picture>
-				</div>
-				<div class="header-page__container">
-					<div class="header-page__content">
-						<div class="header-page__data">29.Jun.2022</div>
-						<h2 class="header-page__title title title_white">I Like to Keep Things Simple to Appreciate the
-							Details</h2>
-						<div class="header-page__text text">Many years ago, I worked for my parents who own a video production
-							company.</div>
-					</div>
-				</div>
-			</section>
-			<div class="page__categories categories">
-				<div class="categories__container">
-					<div class="categories__сhoicee">
-						<div class="categories__add">
-							<button type="button" class="categories__add-button">Categories +</button>
-						</div>
-						<div class="categories__column">
-							<button type="button" class="categories__column-button">3 Column</button>
-							<button type="button" class="categories__column-button">4 Column</button>
-						</div>
-					</div>
-					<div class="categories__card card">
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/01.webp" type="image/webp"><img src="img/card/01.jpg" alt=""></picture>
-								</div>
-
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title"><a class="content-card__title-link title title_black" href="#!">Instagram artists with great
-										photography skills</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/02.webp" type="image/webp"><img src="img/card/02.jpg" alt=""></picture>
-								</div>
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title title title_black"><a class="content-card__title-link title title_black" href="#!">The 20 best creative & strong handmade of 2022</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/03.webp" type="image/webp"><img src="img/card/03.jpg" alt=""></picture>
-								</div>
-
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title title title_black"><a class="content-card__title-link title title_black" href="#!">Apartamento at ten: A decade of celebrating the everyday</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/04.webp" type="image/webp"><img src="img/card/04.jpg" alt=""></picture>
-								</div>
-
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title title title_black"><a class="content-card__title-link title title_black" href="#!">Alessandro Novelli’s animation plays with ANDRE</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/05.webp" type="image/webp"><img src="img/card/05.jpg" alt=""></picture>
-								</div>
-
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title title title_black"><a class="content-card__title-link title title_black" href="#!">Aron Klein’s captivating images of the UDEA</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-						<article class="card__body">
-							<div class="card__top">
-								<div class="card__items">
-									<a class="card__creative" href="#!">CREATIVE</a>
-								</div>
-								<div class="card__image">
-									<picture><source srcset="img/card/06.webp" type="image/webp"><img src="img/card/06.jpg" alt=""></picture>
-								</div>
-							</div>
-							<div class="card__content content-card">
-								<div class="content-card__data">29.Jun.2021</div>
-								<h2 class="content-card__title title title_black"><a class="content-card__title-link title title_black" href="#!">Renzo Patton combines design and nature</a></h2>
-								<div class="content-card__text text">Many years ago, I worked for my parents who own a video
-									production company.</div>
-							</div>
-							<div class="card__author">
-								<a class="card__author-link" href="#!">By: Peter Rowardson</a>
-							</div>
-						</article>
-					</div>
-					<div class="categories__more-articles more-articles">
-						<a class="more-articles__link" href="#!">More Articles</a>
-					</div>
-				</div>
-			</div>
-			<div class="page__featured-topics featured-topics">
-				<section class="featured-topics__left topics-featured">
-					<div class="topics-featured__container">
-						<h2 class="topics-featured__title">Featured Topics</h2>
-						<div class="topics-featured__card card-topics-featured">
-							<article class="card-topics-featured__body">
-								<div class="card-topics-featured__image">
-									<picture><source srcset="img/featured/01.webp" type="image/webp"><img src="img/featured/01.jpg" alt=""></picture>
-								</div>
-								<div class="card-topics-featured__content content-topics-featured-card">
-									<div class="content-topics-featured-card__data">29.Jun.2021</div>
-									<div class="content-topics-featured-card__title">A beautiful solo trip to the Lake Baikal</div>
-									<div class="content-topics-featured-card__text">Leather detail shoulder contrastic colour contour stunning silhouette working peplum.</div>
-
-								</div>
-							</article>
-							<article class="card-topics-featured__body">
-								<div class="card-topics-featured__image">
-									<picture><source srcset="img/featured/02.webp" type="image/webp"><img src="img/featured/02.jpg" alt=""></picture>
-								</div>
-								<div class="card-topics-featured__content content-topics-featured-card">
-									<div class="content-topics-featured-card__data">29.Jun.2021</div>
-									<div class="content-topics-featured-card__title">Incredible architecture inspired by nature</div>
-									<div class="content-topics-featured-card__text">Leather detail shoulder contrastic colour contour stunning silhouette working peplum.</div>
-
-								</div>
-							</article>
-							<article class="card-topics-featured__body">
-								<div class="card-topics-featured__image">
-									<picture><source srcset="img/featured/03.webp" type="image/webp"><img src="img/featured/03.jpg" alt=""></picture>
-								</div>
-								<div class="card-topics-featured__content content-topics-featured-card">
-									<div class="content-topics-featured-card__data">29.Jun.2021</div>
-									<div class="content-topics-featured-card__title">Richard Norton photorealistic rendering as real photos</div>
-									<div class="content-topics-featured-card__text">Leather detail shoulder contrastic colour contour stunning silhouette working peplum.</div>
-								</div>
-							</article>
-						</div>
-					</div>
-				</section>
-				<section class="featured-topics__right slider-topics-featured">
-					<div class="slider-topics-featured__content">
-						<h2 class="slider-topics-featured__title">20 unexpected destinations for your next trip</h2>
-						<div class="slider-topics-featured__sub-title">Black knicker lining concealed back zip fasten swing style high waisted double layer full pattern floral.</div>
-					</div>
-					<div class="slider-topics-featured__image">
-						<picture><source srcset="img/bg/body.webp" type="image/webp"><img src="img/bg/body.jpg" alt=""></picture>
-					</div>
-
-				</section>
-			</div>
-			<section class="page__big-world big-world">
-				<div class="big-world__container">
-					<h2 class="big-world__title">It’s a Big World</h2>
-					<div class="big-world__card world-big-card">
-						<article class="world-big-card__body">
-							<div class="world-big-card__top">
-								<div class="world-big-card__image">
-									<picture><source srcset="img/last-card/01.webp" type="image/webp"><img src="img/last-card/01.jpg" alt=""></picture>
-								</div>
-								<div class="world-big-card__craative">
-									<a href="#!" class="world-big-card__link">CREATIVE</a>
-								</div>
-
-							</div>
-							<div class="world-big-card__content">
-								<div class="world-big-card__data">29.Jun.2021</div>
-								<a href="#!" class="world-big-card__title-link-card">Artist Melissa Kitty Jarram is updating Greek myths for 2022</a>
-								<div class="world-big-card__sub-title">
-									<p>Many years ago, I worked for my parents who own a video production company.</p>
-								</div>
-							</div>
-						</article>
-						<article class="world-big-card__body">
-							<div class="world-big-card__top">
-								<div class="world-big-card__image">
-									<picture><source srcset="img/last-card/02.webp" type="image/webp"><img src="img/last-card/02.jpg" alt=""></picture>
-								</div>
-								<div class="world-big-card__craative">
-									<a href="#!" class="world-big-card__link">CREATIVE</a>
-								</div>
-							</div>
-							<div class="world-big-card__content">
-								<div class="world-big-card__data">29.Jun.2021</div>
-								<a href="#!" class="world-big-card__title-link-card">The ultimate guide to driving Iceland Golden Circle</a>
-								<div class="world-big-card__sub-title">
-									<p>Many years ago, I worked for my parents who own a video production company.</p>
-								</div>
-							</div>
-						</article>
-						<article class="world-big-card__body">
-							<div class="world-big-card__top">
-								<div class="world-big-card__image">
-									<picture><source srcset="img/last-card/03.webp" type="image/webp"><img src="img/last-card/03.jpg" alt=""></picture>
-								</div>
-								<div class="world-big-card__craative">
-									<a href="#!" class="world-big-card__link">CREATIVE</a>
-								</div>
-
-							</div>
-							<div class="world-big-card__content">
-								<div class="world-big-card__data">29.Jun.2021</div>
-								<a href="#!" class="world-big-card__title-link-card">10 adventures to have in North America</a>
-								<div class="world-big-card__sub-title">
-									<p>Many years ago, I worked for my parents who own a video production company.</p>
-								</div>
-							</div>
-						</article>
-						<article class="world-big-card__body">
-							<div class="world-big-card__top">
-								<div class="world-big-card__image">
-									<picture><source srcset="img/last-card/04.webp" type="image/webp"><img src="img/last-card/04.jpg" alt=""></picture>
-								</div>
-								<div class="world-big-card__craative">
-									<a href="#!" class="world-big-card__link">CREATIVE</a>
-								</div>
-							</div>
-							<div class="world-big-card__content">
-								<div class="world-big-card__data">29.Jun.2021</div>
-								<a href="#!" class="world-big-card__title-link-card">Peter Funch shares the photo books that inspire his own practice</a>
-								<div class="world-big-card__sub-title">
-									<p>Many years ago, I worked for my parents who own a video production company.</p>
-								</div>
-							</div>
-						</article>
-					</div>
-				</div>
-			</section>
-		</main>
-		<footer class="footer">
-			<div class="footer__container">
-				<div class="footer__top">
-					<div class="footer__logo">
-						<a href="#!">VENCE Studio</a>
-					</div>
-					<div class="footer__menu">
-						<nav class="footer__nav">
-							<ul class="footer__list">
-								<li class="footer__item">
-									<a href="#!" class="footer__link">About Studio</a>
-								</li>
-								<li class="footer__item">
-									<a href="#!" class="footer__link">Archive</a>
-								</li>
-								<li class="footer__item">
-									<a href="#!" class="footer__link">Contact Us</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-
-				</div>
-				<div class="footer__bottom">
-					<div class="footer__content">
-						<div class="footer__adresa">
-							<a class="footer__adresa-link" href="#!">1088, North Street, Alexandria, AU</a>
-						</div>
-						<div class="footer__reserved">
-							© 2022, All Rights Reserved
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-		</footer>
+	<div class="rootpage">
+		<h1>Верстка «gulp GLOBAL»</h1>
+		<div class="rootpage__info">
+			Опис проєкту
+		</div>
+		<h2>Готові сторінки:</h2>
+		<ol class="rootpage__list">
+			<li><a target="_blank" href="home.html">ДЗ | №11</a></li>
+		</ol>
+		<div class="rootpage__tnx">
+			<h2>Дякую за фідбек</h2>
+		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230410120932"></script>
 </body>
+<style>
+	@charset "UTF-8";
+	@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap");
+
+	*,
+	*::before,
+	*::after {
+		padding: 0px;
+		margin: 0px;
+		border: 0px;
+		box-sizing: border-box;
+	}
+
+	html,
+	body {
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		min-width: 320px;
+		width: 100%;
+		color: #fff;
+		background-color: #5e5373;
+	}
+
+	body {
+		font-family: Montserrat;
+		font-size: 100%;
+		line-height: 1;
+		font-size: 1rem;
+	}
+
+	a {
+		text-decoration: underline;
+		color: #ebe691
+	}
+
+	a:visited {
+		text-decoration: underline;
+		color: #aaa768;
+	}
+
+	a:hover {
+		text-decoration: none;
+	}
+
+	ul li {
+		list-style: none;
+	}
+
+	img {
+		vertical-align: top;
+	}
+
+	.wrapper {
+		width: 100%;
+		min-height: 100%;
+		overflow: hidden;
+	}
+
+	.rootpage {
+		padding: 30px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	@media (max-width: 767px) {
+		.rootpage {
+			padding: 30px 15px;
+		}
+	}
+
+	h1 {
+		color: #ebe691;
+		font-size: 2.5rem;
+		margin: 0px 0px 1.25rem 0px;
+	}
+
+	@media (max-width: 767px) {
+		h1 {
+			font-size: 1.85rem;
+			margin: 0px 0px 1.25rem 0px;
+		}
+	}
+
+	h2 {
+		color: #ebe691;
+		font-size: 1.25rem;
+		margin: 0px 0px 1rem 0px;
+	}
+
+	@media (max-width: 767px) {
+		h2 {
+			font-size: 1.125rem;
+			margin: 0px 0px 1rem 0px;
+		}
+	}
+
+	.rootpage__info {
+		line-height: 140%;
+		margin: 0px 0px 1.5rem 0px;
+	}
+
+	.rootpage__list {
+		margin: 0px 0px 2.25rem 1.25rem;
+	}
+
+	.rootpage__list li:not(:last-child) {
+		margin: 0px 0px 15px 0px;
+	}
+
+	.rootpage__contacts,
+	.rootpage__tnx {
+		border-radius: 200px;
+		padding: 20px 65px;
+
+	}
+
+	@media (max-width: 767px) {
+
+		.rootpage__contacts,
+		.rootpage__tnx {
+			border-radius: 40px;
+			padding: 20px;
+		}
+	}
+
+	.rootpage__contacts {
+		background: #32b5a4;
+
+	}
+
+	.rootpage__contacts a {
+		color: #ebe691;
+	}
+
+	.rootpage__tnx {
+		background: #c22d63;
+		margin: 0px 0px 1rem 0px;
+	}
+</style>
 
 </html>
