--- a/Lessons_3-JS/lesson-4.html
+++ b/Lessons_3-JS/lesson-4.html
@@ -20,9 +20,9 @@
 			break;
 		case userAge <= 16: result = `Школяр`;
 			break;
-		case userAge <= 17: result = `Студент`;
+		case userAge <= 23: result = `Студент`;
 			break;
-		case userAge <= 23: result = `Працівник`;
+		case userAge < 60: result = `Працівник`;
 			break;
 		case userAge >= 60: result = `Людина пожилого віку`;
 			break
